objects/Doctor_Status_Snapshot__c.object
<CustomObject>
    <description>Doctor Status by Last Sample</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Sample__c</fullName>
        <label>Days since Last Sample</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name__c</fullName>
        <label>Doctor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sample_Date__c</fullName>
        <label>First Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Sample_Date__c</fullName>
        <label>Last Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples__c</fullName>
        <label>Number of Samples</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Doctor Status Snapshot</label>
    <nameField>
        <label>Doctor Status Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctor Status Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>